# mrkkrp.github.io

./: .gitignore  README.md  contact.html  contact.md  feed.atom  index.html  makefile  mrkkrp-blog.cabal
css/: style.css
posts/: announcing-megaparsec-5.html  category-theory-part-1.html  category-theory-part-1.md  dvorak-rocks.html  latest-additions-to-megaparsec.html  latest-additions-to-megaparsec.md  lisp-and-haskell.html  lisp-and-haskell.md  megaparsec-4-and-5.html  putting-together-a-form-validation-library.html  putting-together-a-form-validation-library.md  the-identicon-package.html  the-identicon-package.md  why-lisp-sucks-so-badly.html
src/: Main.hs
templates/: default.html  index.html  post.html
